fix loading overlap

--- a/src/styles/dailytimeline.css
+++ b/src/styles/dailytimeline.css
@@ -10,6 +10,7 @@
 
 .timeline-container {
     position: relative;
+    z-index: -5;
     overflow-y: scroll;
     overflow-x: hidden;
     padding: 0 20px;
