--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,8 +2,8 @@
   --light-font-color: white;
   --dark-color: #222223;
   --medium-dark-color: #2e2f30;
-  --light-line-color: #dfdfdf;
-  --strong-line-color: #9f9f9f;
+  --light-line-color: #e5e5e5;
+  --strong-line-color: #c1c1c1;
   --secondry-color: #e1c41f;
   --employee-icon-back-color: #0050b1;
   --negative-action-color: #fc3737;
